--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,38 +1,128 @@
-.App {
-  text-align: center;
+*{
+  margin :0;
+  padding:0;
+  box-sizing: border-box;
+  font-family: "Poppins",sans-serif;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+nav{
+  display:flex;
+  align-items: center;
+  justify-content: space-around;
+  height:80px;
+  background: #02735E;
+  border-bottom:2px solid #fff;
 }
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+nav .logo a{
+  font-size: 26px;
+  color: #fff;
+  font-weight: 600;
+  text-decoration: none;
 }
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+nav .logo a:hover{
+  color: #03A678;
+  transition:0.5s;
+}
+nav ul{
   display: flex;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  gap:2.5rem;
+}
+nav ul li{
+  list-style: none;
+}
+nav ul li a{
+  font-size: 18px;
+  color: #fff;
+  text-decoration: none;
+  font-weight: 500;
+}
+nav ul li a:hover{
+  color: #03A678;
+  transition:0.5s;
+}
+.menu-icon{
+  display: none;
+  width:25px;
+  height:3px;
+  background: #fff;
+  transform: translateY(-50%);
+  transition:0.5s;
+  border-radius: 5px;
+  cursor:pointer;
+}
+.menu-icon:before,
+.menu-icon:after{
+  content: "";
+  position: absolute;
+  width: 25px;
+  height: 3px;
+  background: #fff;
+  transition:0.5s;
+  border-radius: 5px;
+}
+.menu-icon:before{
+  top: -8px;
+}
+.menu-icon:after{
+  top: 8px;
+}
+.menu-icon.active{
+  background:black;
+}
+.menu-icon.active:before{
+  top:0;
+  transform: rotate(45deg);
+}
+.menu-icon.active:after{
+  top:0;
+  transform: rotate(135deg);
+}
+@media screen and (max-width:992px){
+  nav ul{
+    position:fixed;
+    top:50px;
+    left:100%;
+    width:100%;
+    height:90vh;
+    background: #02735E;
+    flex-direction: column;
+    transition: 0.5s ease-in;
+  }
+  nav ul li a {
+    font-size: 24px;
+  }
+  ul.active{
+    left:0;
+    transition: 0.5s ease-in;
+  }
+  .menu-icon{
+    display: block;
+  }
+
+}
+.baseContenido {
+  display: grid;
+  grid-template-columns: repeat(5, 20%); /* 20% de ancho para cada columna */
+  grid-template-rows: repeat(5, 100px); /* 100px de altura para cada fila */
+  gap: 8px; /* Espacio entre elementos */
 }
 
-.App-link {
-  color: #61dafb;
+.contenido {
+  grid-column: 3; /* Empieza en la tercera columna */
+  grid-row: 2 / span 3; /* Ocupa 3 filas comenzando en la segunda fila */
+  width: 100%; /* Asegura que ocupe todo el espacio disponible */
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.opciones {
+  grid-column: 2; /* Empieza en la segunda columna */
+  grid-row: 2 / span 3; /* Ocupa 3 filas comenzando en la segunda fila */
+  width: 100%; /* Asegura que ocupe todo el espacio disponible */
+}
+
+footer {
+  text-align: center; /* Alinea el texto del footer al centro */
+  padding: 10px; /* Espaciado interno del footer */
+  background: #02735E; /* Color de fondo del footer */
+  color: white; /* Color del texto */
 }
